Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
-
None
-
ghx-label-4
Description
Once the shut down process is initiated, impalad would stop accepting any new connections or queries. This makes it difficult if a user wants to shut down impalad across a cluster via the shutdown command. For eg. the user would need to make sure to send the command to all executors before sending them to the coordinators. Adding a mechanism to initiate the graceful shutdown process with a large deadline by sending a SIGRTMIN to the impalad process would make cluster management simpler.
Attachments
Issue Links
- is related to
-
IMPALA-10471 Make deadline configurable for SIGTERMIN graceful shutdown
- Resolved